--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ hr { border:0.5px dotted gray !important; }
 <li><strong>学历：</strong>&ensp;西北工业大学&ensp;&ensp;软件工程（本科）&ensp;&ensp;2006级&ensp;&ensp;</li>
 <li><strong>手机号码：</strong>&ensp;18085192480&ensp;&ensp;</li>
 <li><strong>电子邮箱：</strong>&ensp;<a href="21dd468f698fb441075f5e10e9ed9092.html">42550564@qq.com</a></li>
-<li><strong>Github&ensp;地址</strong>：<a href="https://github.com/remobile" target="_blank">https://github.com/remobile</a></li>
+<li><strong>Github&ensp;地址1</strong>：<a href="https://github.com/remobile" target="_blank">https://github.com/remobile</a></li>
+<li><strong>Github&ensp;地址2</strong>：<a href="https://github.com/fov42550564" target="_blank">https://github.com/fov42550564</a></li>
+<li><strong>个人主页</strong>：<a href="https://blogoo.github.io/home" target="_blank">https://blogoo.github.io/home</a></li>
 </ul>
 </dd><dt><h5>求职意向</h5></dt><dd><ul>
 <li><strong>工作性质：</strong>&ensp;全职</li>
