--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@ hr { border:0.5px dotted gray !important; }
 <li><strong>期望月薪：</strong>&ensp;20000-25000元/月</li>
 <li><strong>目前状况：</strong>&ensp;我目前处于离职状态，可立即上岗，原团队中有几个兄弟非常不错，如果有可能，可以带团队入职。</li>
 </ul>
-</dd><dt><h5>自我评价</h5></dt><dd><p>在校期间使用java开发过很多小游戏，如五子棋，中国相机，黑白棋，挖雷等等，对Java有一定的理解深度。<br>
-西北工业大学毕业后就职于福建星网锐捷通讯股份有限公司，有2年嵌入式编程经验，从事移动电话和家庭网关的研发工作。<br>
-2年后回到贵阳，就职于贵阳朗玛信息技术股份有限公司，专门从事视频的研发工作，开发过视频通话，视频录制点拍，视频编辑。<br>
-熟练使用C，C++，ObjC，Opengl，java，JNI，Nodejs，Makefile，第三方库交叉编译，Shell脚本。<br>
-在贵阳宏杰科技有限公司工作期间实现自己的飞跃，开始搭建app架构。之后加入贵阳赢销截拳道科技有限公司，进一步提升自我，实现带领团队做项目。<br>
+</dd><dt><h5>自我评价</h5></dt><dd><p>在贵阳宏杰科技有限公司工作期间实现自己的飞跃，开始搭建app架构。之后加入贵阳赢销截拳道科技有限公司，进一步提升自我，实现带领团队做项目。<br>
 2017年作为创始人的身份加入贵州四面通科技有限公司，实现了对整个行业的技术掌控和团队创建和管理。</p>
 </dd><dt><h5>工作经历</h5></dt><dd><p>2017/07&ensp;--&ensp;至今</p>
 <p>贵州四面通科技有限公司|技术总监兼研发部经理<br>
@@ -73,7 +69,5 @@ hr { border:0.5px dotted gray !important; }
 编写一个关于物流竞价调控的发明专利。</p>
 </dd><dt><h5>兴趣爱好</h5></dt><dd><p>1.个人非常热爱it行业，每天除了陪家人的时间基本上都在不停的写代码，非常喜欢学习一些新的东西。每天必须浏览的两个网站是开源中国和it新闻网。<br>
 2.非常喜欢让电脑做做更多的事情，而不是自己慢慢的动手去做事情，因此非常喜欢linux系统，喜欢使用linux&ensp;shell编写各种小工具来完成日常和工作中的事情。欲善其事，必先利其器一直是我谨记的名言。<br>
-3.我会不停的追求新的技术，nodejs出来的时候，迷恋上nodejs，利用个人时间开发出很多工具和游戏，不过都没有形成规模。go，swift，docker，nodejs都是日常关注的事情。<br>
-4.在业余时间，接触到了cocos2dx，对于跨平台的东西我非常感兴趣，因为个人喜欢用更少的代码做更多的事情。于是使用cocos2dx编写过一款游戏《天天拼图》和一款视频工作《魔拍相机》，都已经在上架了。<br>
-5.个人很喜欢开源，开源让我学习了很多东西，我也会对开源做出贡献，在github中上传个自己编写的一些工具。个人非常喜欢git作为备份和版本控制。大到我的工程，小到我的日常生活中的记录，我都会使用git来管理。</p>
+3.个人很喜欢开源，开源让我学习了很多东西，我也会对开源做出贡献，在github中上传个自己编写的一些工具。个人非常喜欢git作为备份和版本控制。大到我的工程，小到我的日常生活中的记录，我都会使用git来管理。</p>
 </dd></span></div></div></article></div><div class="docs-prevnext"></div></div></div></div><footer class="nav-footer" id="footer"><section class="copyright">Copyright © 2019 方运江.</section></footer></div></body></html>
